<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/Pay"
        android:src="@drawable/transpay_logo" />

            <Button
                android:id="@+id/balanceButton"
                android:layout_width="match_parent"
                android:background="@drawable/border"
                android:onClick="petrolButtonClick"
                android:textColor="#000000"
                android:layout_height="110dip"
                android:textSize="30sp"
                android:layout_below="@+id/imageView2"
                android:textStyle="bold"
                android:text="@string/Petrol" />

            <Button
                android:id="@+id/payButton"
                android:layout_width="match_parent"
                android:onClick="dieselButtonClick"
                android:textColor="#000000"
                android:layout_height="110dip"
                android:layout_below="@+id/balanceButton"
                android:textStyle="bold"
                android:background="@drawable/border"
                android:text="@string/Disel"
                android:textSize="30sp" />

            <Button
                android:id="@+id/reverseButton"
                android:layout_width="match_parent"
                android:layout_height="110dip"
                android:textStyle="bold"
                android:layout_below="@+id/payButton"
                android:background="@drawable/border"
                android:onClick="gasButtonClick"
                android:textColor="#000000"
                android:textSize="30sp"
                android:text="@string/Gas" />

    <TextView
        android:id="@+id/redButtonForBackwardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:textColor="#FF0000"
        android:gravity="center_horizontal"
        android:text="@string/PressRedButtonForBackward" />
</RelativeLayout>
