<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/Pay"
        android:src="@drawable/transpay_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_below="@+id/imageView3"
        android:layout_height="40dip"
        android:textSize="20sp"
        android:background="#555252"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/EnterTRNumber"
        android:textColor="#EFF62A" />

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:ems="10"
                android:labelFor="@id/amountEditText"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/greenButtonForForwardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_above="@+id/redButtonForBackwardTextView"
        android:textColor="#008000"
        android:gravity="center_horizontal"
        android:text="@string/PressGreenButtonForForward" />

    <TextView
        android:id="@+id/redButtonForBackwardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:textColor="#FF0000"
        android:gravity="center_horizontal"
        android:text="@string/PressRedButtonForBackward" />
</RelativeLayout>
