<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.transpay.Balance"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/Pay"
        android:src="@drawable/transpay_logo" />

    <View
        android:id="@+id/balanceLineView1"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="10dp"
        android:background="#000000" />


    <TextView
        android:id="@+id/balanceTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/balanceLineView1"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="#000000" />

    <View
        android:id="@+id/balanceLineView"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/balanceTextView"
        android:layout_marginTop="10dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/balanceLineView"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal"
        android:text="@string/Numbers"
        android:textColor="#FF0000" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_below="@+id/numbers"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/numbersVariables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:visibility="gone"
        android:layout_below="@+id/numbers"
        android:layout_marginTop="10sp"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:text="" />

    <TextView
        android:id="@+id/greenButtonForForwardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_above="@+id/redButtonForBackwardTextView"
        android:textColor="#008000"
        android:gravity="center_horizontal"
        android:text="@string/PressGreenButtonForForward" />

    <TextView
        android:id="@+id/redButtonForBackwardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:textColor="#FF0000"
        android:gravity="center_horizontal"
        android:text="@string/PressRedButtonForBackward" />
</RelativeLayout>
