<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/Pay"
        android:src="@drawable/transpay_logo" />

    <View
        android:id="@+id/balanceLineView"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/paymentTypeLocator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/balanceLineView"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="#FF0000" />

            <Button
                android:id="@+id/ai76Button"
                android:layout_width="match_parent"
                android:layout_below="@+id/paymentTypeLocator"
                android:background="@drawable/border"
                android:onClick="manatButtonClick"
                android:textColor="#000000"
                android:layout_height="100dip"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="Manat" />

            <Button
                android:id="@+id/ai92Button"
                android:layout_width="match_parent"
                android:layout_height="100dip"
                android:layout_below="@+id/ai76Button"
                android:onClick="litreButtonClick"
                android:textColor="#000000"
                android:textStyle="bold"
                android:background="@drawable/border"
                android:text="@string/Litre"
                android:textSize="30sp" />

    <TextView
        android:id="@+id/redButtonForBackwardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:textColor="#FF0000"
        android:gravity="center_horizontal"
        android:text="@string/PressRedButtonForBackward" />
</RelativeLayout>
